--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,10 @@ th{ font-size:.92rem; color:#40506b; }
           <option value="">Oba kraje</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
+          <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
         </select>
       </div>
     </div>
-
     <div class="panels">
       <div class="card">
         <h3>Přehled</h3>
@@ -127,6 +127,7 @@ th{ font-size:.92rem; color:#40506b; }
           <option value="">Oba kraje</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
+          <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
         </select>
       </div>
     </div>
@@ -174,6 +175,7 @@ th{ font-size:.92rem; color:#40506b; }
           <option value="">Oba kraje</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
+          <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
         </select>
       </div>
     </div>
