--- a/public/index.html
+++ b/public/index.html
@@ -312,5 +312,5 @@ Array.from(document.querySelectorAll('select[data-role=region]')).forEach(sel=>{
   else init();
 })();
 </script>
-
+vs.js</script>
 </body></html>
