--- a/public/index.html
+++ b/public/index.html
@@ -381,4 +381,10 @@ fetch('/data/job_offers.json')
 </script>
 
 
+<div id="chatbot-container">
+  <div id="chatbot-messages"></div>
+  <input type="text" id="chatbot-input" placeholder="Napiš zprávu...">
+</div>
+
+  
 </body></html>
