--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>UKÁZKA – SŠ Bor · 3 obory (Automechanik · Opravář ZS · Kuchař‑číšník)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="chatbot.css">
 <style>
 :root{
   /* společné barvy */
