Implement chat feature in index.html
Added a chat interface with input and message display.

--- a/public/index.html
+++ b/public/index.html
@@ -345,4 +345,25 @@ Array.from(document.querySelectorAll('select[data-role=region]')).forEach(sel=>{
 })();
 </script>
 
-</body></html>
+
+<div id="chat-trigger">?</div>
+
+<div id="chat-window">
+    <div class="chat-header">
+        <h3>Kariérový poradce</h3>
+        <p>Jak vám mohu pomoci?</p>
+    </div>
+    
+    <div class="chat-messages" id="chat-messages">
+        </div>
+    
+    <div class="chat-input">
+        <input type="text" id="chat-input-field" placeholder="Napište svou zprávu...">
+        <button id="chat-send-btn">→</button>
+    </div>
+</div>
+
+<script src="chatbot.js"></script>
+
+</body>
+</html>
