--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@ th{ font-size:.92rem; color:#40506b; }
       <div class="toolbar" style="margin-top:.75rem">
         <button class="btn btn--auto" data-role="load" data-target="auto">Automechanik</button>
         <select class="select" data-role="region" data-target="auto" aria-label="Vyberte kraj">
-          <option value="">Oba kraje</option>
+          <option value="">Všechny lokality</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
           <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
@@ -124,7 +124,7 @@ th{ font-size:.92rem; color:#40506b; }
       <div class="toolbar" style="margin-top:.75rem">
         <button class="btn btn--agri" data-role="load" data-target="agri">Opravář ZS</button>
         <select class="select" data-role="region" data-target="agri" aria-label="Vyberte kraj">
-          <option value="">Oba kraje</option>
+          <option value="">Všechny lokality</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
           <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
@@ -171,7 +171,7 @@ th{ font-size:.92rem; color:#40506b; }
       <div class="toolbar" style="margin-top:.75rem">
         <button class="btn btn--gastro" data-role="load" data-target="gastro">Kuchař‑číšník</button>
         <select class="select" data-role="region" data-target="gastro" aria-label="Vyberte kraj">
-          <option value="">Oba kraje</option>
+          <option value="">Všechny lokality</option>
           <option value="CZ032">Plzeňský kraj</option>
           <option value="CZ041">Karlovarský kraj</option>
           <option value="zahranici_bor">Zahraničí (do 70km od Boru)</option>
